# api-formatter

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: api-formatter.service  config.toml  quick-install.sh
src/: main.rs
